fixed spacing and added active state

--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -25,9 +25,20 @@
     .nav-item {
         a.nav-link {
             color: white;
+            transition: color 0.3s ease-in-out;
+            position: relative;
 
             &:hover {
                 color: #ffcc00;
+            }
+
+            &.active {
+                color: #ffcc00;
+                font-weight: bold;
+
+                &::before {
+                    display: none;
+                }
             }
         }
     }
@@ -47,19 +58,30 @@
     width: 100%;
     height: 2px;
     background: linear-gradient(to right, #ff0000, #ffcc00);
-    bottom: -5px;
-    left: 0;
-    transform: scaleX(0);
-    transform-origin: right;
     transition: transform 0.4s ease-out;
 }
 
 .hover-underline::before {
     top: -5px;
+    transform: scaleX(0);
     transform-origin: left;
+}
+
+.hover-underline::after {
+    bottom: -5px;
+    transform: scaleX(0);
+    transform-origin: right;
 }
 
 .hover-underline:hover::after,
 .hover-underline:hover::before {
     transform: scaleX(1);
+}
+
+.hover-underline.active::before {
+    display: none;
+}
+
+.hover-underline.active:hover::after {
+    transform: scaleX(0);
 }
